# extrator-contas

./: .gitattributes  .gitignore  Dockerfile  docker-compose.yaml  lab.py  main.py  notas_fiscais.xlsx  pyproject.toml  readme.md  requirements.txt
app/: data_extractor.py  main.py  pdf_processor.py  service.py
app/extractors/: algar.py  base.py  boleto.py  vivo.py
